# STAG-Oatpp-Data-Consumer-Adapter

./: .gitlab-ci-templates.yml  .gitlab-ci.yml  .hspt-cpp  AUTHORS  CHANGELOG.md  CMakeLists.txt  Doxyfile  NOTICE  README.md  ci-variables.yml  conanfile.py
docs/: .w3.css
includes/: Adapter.hpp
includes/private/: DTOs.hpp  MyController.hpp
includes/public/: Adapter.hpp
sources/: CMakeLists.txt
sources/Adapter/: Adapter.cpp  Adapter.hpp  CMakeLists.txt  RestInterface.hpp
sources/Beispiel/: CMakeLists.txt
sources/Beispiel/src/: App.cpp  App.hpp  AppComponent.hpp  Swagger.hpp
sources/Beispiel/src/controller/: MyController.hpp
sources/Beispiel/src/dto/: DTOs.hpp
sources/Controller/: App.cpp  CMakeLists.txt
sources/Example/: CMakeLists.txt  main.cpp
test_package/: CMakeLists.txt  example.cpp
unit_tests/: CMakeLists.txt
utility/: run-valgrind.py
